# snparcher-cli

./: .gitignore  README.md  pyproject.toml
snparcher/: main.py  utils.py
snparcher/workflow/modules/qc/: Snakefile
test/cli/: cli-coords.txt
